fix link editor z-index

--- a/src/components/editor/plugins/FloatingLinkEditorPlugin/index.css
+++ b/src/components/editor/plugins/FloatingLinkEditorPlugin/index.css
@@ -3,5 +3,5 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 51;
+  z-index: 100001;
 }
